Updated the cards styling to fix subtext overflowing containers and affecting card spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,11 +107,11 @@ button {
     flex-direction: column;
     align-items: center;
     gap:8px;
+    flex-basis: 250px;
 }
 
 figcaption {
     text-align: center;
-    padding-inline: 28px;
 }
 
 .card img {
